--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "viewlastlog"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -11,3 +11,4 @@ crossterm = "0.23.2"
 chrono = "0.4"
 getch = "0.3.1"
 glob = "0.3.0"
+reqwest = { version = "0.11", features = ["blocking"] }
